force-app/main/default/objects/Ordem__c/Ordem__c.object-meta.xml
<CustomObject>
    <description>Ordem de compra ou venda de ativos</description>
    <label>Ordem</label>
    <nameField>
        <displayFormat>ORD{000000}</displayFormat>
        <label>Código de Ordem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>