force-app/main/default/objects/Ordem__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <description>Código do Ativo</description>
    <formula>AtivoCarteira__r.Ativo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Text</type>
</CustomField>