force-app/main/default/objects/Ordem__c/fields/AtivoCarteira__c.field-meta.xml
<CustomField>
    <fullName>AtivoCarteira__c</fullName>
    <label>Ativo de Carteira</label>
    <referenceTo>AtivoCarteira__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Ordens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>