force-app/main/default/objects/Ordem__c/fields/Correntista__c.field-meta.xml
<CustomField>
    <fullName>Correntista__c</fullName>
    <formula>AtivoCarteira__r.CarteiraInvestimentos__r.Contact__r.FirstName +  AtivoCarteira__r.CarteiraInvestimentos__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correntista</label>
    <type>Text</type>
</CustomField>