force-app/main/default/objects/Ordem__c/fields/Instituicao__c.field-meta.xml
<CustomField>
    <fullName>Instituicao__c</fullName>
    <description>Nome da Instituição</description>
    <formula>AtivoCarteira__r.CarteiraInvestimentos__r.Instituicao__r.NomeInstituicao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nome da Instituição</inlineHelpText>
    <label>Instituição</label>
    <type>Text</type>
</CustomField>