force-app/main/default/objects/Ordem__c/fields/NomeAtivo__c.field-meta.xml
<CustomField>
    <fullName>NomeAtivo__c</fullName>
    <description>Nome do Ativo</description>
    <formula>AtivoCarteira__r.Ativo__r.NomeAtivo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nome do Ativo</inlineHelpText>
    <label>Nome do Ativo</label>
    <type>Text</type>
</CustomField>