force-app/main/default/objects/Ordem__c/fields/Preco__c.field-meta.xml
<CustomField>
    <fullName>Preco__c</fullName>
    <description>Preço unitário dos ativos a serem negociados</description>
    <inlineHelpText>Preço unitário dos ativos a serem negociados</inlineHelpText>
    <label>Preço</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>