force-app/main/default/objects/Ordem__c/fields/PrecoMedioCompra__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedioCompra__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Preço Médio de Compra do ativo</description>
    <label>Preço Médio de Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>