force-app/main/default/objects/Ordem__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de ativos a serem negociados</description>
    <inlineHelpText>Quantidade de ativos a serem negociados</inlineHelpText>
    <label>Quantidade</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>