force-app/main/default/objects/Ordem__c/fields/QuantidadeContabil__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeContabil__c</fullName>
    <description>Quantidade a ser somada ou subtraída da carteira</description>
    <formula>IF( ISPICKVAL( Tipo__c , &quot;Compra&quot;),
 Quantidade__c ,
 Quantidade__c * -1

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantidade a ser somada ou subtraída da carteira</inlineHelpText>
    <label>Quantidade Contábil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>