force-app/main/default/objects/Ordem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Executada</fullName>
                <default>true</default>
                <label>Não Executada</label>
            </value>
            <value>
                <fullName>Em Processamento</fullName>
            </value>
            <value>
                <fullName>Executada</fullName>
            </value>
            <value>
                <fullName>Cancelada pelo Usuário</fullName>
            </value>
            <value>
                <fullName>Cancelada por falta de saldo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>