force-app/main/default/objects/Ordem__c/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <description>Valor total a ser negociado na Ordem</description>
    <formula>Quantidade__c *  Preco__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor total a ser negociado na Ordem</inlineHelpText>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>