force-app/main/default/objects/Ordem__c/fields/ValorTotalContabil__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalContabil__c</fullName>
    <description>Informa o valor total investido considerando as ordens de compras e vendas</description>
    <formula>IF( ISPICKVAL( Status__c , &quot;Executada&quot;) ,
   IF( ISPICKVAL( Tipo__c , &quot;Compra&quot;),
       Preco__c *  QuantidadeContabil__c ,
       PrecoMedioCompra__c *  QuantidadeContabil__c 
   ),
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Informa o valor total investido considerando as ordens de compras e vendas</inlineHelpText>
    <label>Valor Total Contábil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>