force-app/main/default/objects/Ordem__c/validationRules/Venda_Sem_Saldo.validationRule-meta.xml
<ValidationRule>
    <fullName>Venda_Sem_Saldo</fullName>
    <active>true</active>
    <description>Não permite efetuar uma venda sem o ativo na carteira ou com saldo insuficiente</description>
    <errorConditionFormula>IF(
	(AtivoCarteira__c == null ||   Quantidade__c &gt;  AtivoCarteira__r.QuantidadeCalculada__c) &amp;&amp;  ISPICKVAL(Tipo__c, &quot;Venda&quot;), 
	true,
	false
)</errorConditionFormula>
    <errorMessage>Não há papeis suficientes para realizar a venda</errorMessage>
</ValidationRule>