force-app/main/default/objects/Ordem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ativo__c</columns>
    <columns>Preco__c</columns>
    <columns>Quantidade__c</columns>
    <columns>ValorTotalContabil__c</columns>
    <columns>PrecoMedioCompra__c</columns>
    <columns>Tipo__c</columns>
    <columns>ValorTotal__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>